--- a/student-records-app/src/frontend/addFee.css
+++ b/student-records-app/src/frontend/addFee.css
@@ -19,6 +19,7 @@
     padding: 20px;
     background-color: #f5f5f5;
     border-right: 1px solid #ddd;
+    margin-top: 32px; 
   }
   
   #studentSearch .checkbox-container {
@@ -96,6 +97,7 @@
   #studentSearch article {
     position: static;
     padding: 20px;
+    margin-top: -13px; 
   }
 
   #studentSearch article > * {
@@ -103,7 +105,7 @@
     padding: 20px;
     box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* soft shadow */
     border: 1px solid #e0e0e0;
-    border-radius: 25px;
+    border-radius: 16px;
     margin: 25px;
   }
 
