--- a/student-records-app/src/frontend/courses.css
+++ b/student-records-app/src/frontend/courses.css
@@ -116,7 +116,7 @@ h2 {
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 5px 0px #004385;
   white-space: nowrap; /* Prevent button text from wrapping */
-  width: 100px; /* Fixed width for Register button */
+  width: fit-content; /* Fixed width for Register button */
   height: 40px; /* Fixed height for Register button */
   display: flex;
   align-items: center;
@@ -227,4 +227,17 @@ label {
   width: 200px;
   display: flex;
   flex-direction: column; /* Spacing between filter boxes */
+}
+
+.student-search2 {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  border-radius: 8px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.admin-controls h3 {
+  transform: translateX(275px);
+  margin-bottom: -10px; 
 }
