--- a/student-records-app/src/frontend/studentProfile.css
+++ b/student-records-app/src/frontend/studentProfile.css
@@ -59,12 +59,11 @@ tbody tr:nth-child(even) {
     margin-bottom: 40px;
 }
 
-/* Style for the button container */
 .search-button-container3 {
     width: 300px;
     position: absolute;
-    text-align: right; /* Align the button to the right */
-    margin-bottom: 20px; /* Add space below the button */
+    text-align: right; 
+    margin-bottom: 20px; 
     left: 550px;
     right: -450px;
     background-color: white; 
@@ -73,7 +72,6 @@ tbody tr:nth-child(even) {
     transform: translate(-120px);
 }
 
-/* Style for the button itself */
 .profile_search-button {
     padding: 10px 20px;
     font-size: 16px;
