--- a/student-records-app/src/frontend/makePayment.css
+++ b/student-records-app/src/frontend/makePayment.css
@@ -1,4 +1,3 @@
-/* makePayment.css */
 #makePayment > * {
     margin: 2rem 0;
 }
@@ -26,7 +25,7 @@
 #makePayment .box-container > *{
     background-color: white;
     padding: 1rem 1.5rem;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* Soft Shadow */
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); 
     border: 3px solid #004385;
     border-radius: 25px;
 }
@@ -58,13 +57,13 @@
 #makePayment .amount {
     background-color: rgba(255, 255, 255, 0.9);
     padding: 1rem 1.5rem;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* Soft Shadow */
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); 
     border: 3px solid #004385;
     border-radius: 25px;
-    display: inline-block; /* Ensures width only fits content */
-    width: auto; /* Default behavior for inline-block */
-    max-width: 100%; /* Prevents it from overflowing */
-    white-space: nowrap; /* Prevents wrapping inside the element */
+    display: inline-block; 
+    width: auto; 
+    max-width: 100%; 
+    white-space: nowrap; 
     margin-top: 0;
     margin-left: 13em; 
     position: relative; 
@@ -77,7 +76,7 @@
     padding: 1rem 1.5rem;
     background-color: #004385;
     color: white;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* Soft Shadow */
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); 
     border-radius: 25px;
 }
 #makePayment .payment-method-input {
@@ -95,8 +94,8 @@
     margin: 0 auto;
     margin-top: 100px; 
     padding: 20px;
-    border-radius: 50px; /* Optional: Add rounded corners */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
+    border-radius: 50px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
     background: rgba(255, 255, 255, 1);
     border: 10px solid #004385;
 }
